--- a/style.css
+++ b/style.css
@@ -38,3 +38,22 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%); /*centres image within centre of page*/
 }
+
+/* Image Container*/
+.image-container {
+  margin: 10px 30%;
+}
+
+.image-container img {
+  width: 100%;
+}
+
+/* Media Query: Large Smartphone */
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 20px;
+  }
+  .image-container {
+    margin: 10px;
+  }
+}
